--- a/package.json
+++ b/package.json
@@ -8,23 +8,20 @@
     "dev": "nodemon server.js",
     "init-db": "node scripts/initDatabase.js"
   },
-  "keywords": [
-    "api",
-    "bars",
-    "express"
-  ],
+  "keywords": ["api", "bars", "express"],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "cors": "^2.8.5",
+    "pg": "^8.11.3",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "express-rate-limit": "^7.1.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
+
